# swarm

./: EEDF_optimize.yaml  EEDF_optimze.py  README.md  README_optimize.md  plan_fast2.md  pyproject.toml  requirements.txt  run_sweep.py
benchmarks/: profile_swarm.py
configs/: Ar_N2_sweep.yaml  example_visual.yaml  example_visual_jit.yaml  example_visual_jit_comsol.yaml
cross_sections/: Ar_Biagi.txt  Cl.txt  N2_Biagi.txt
docs/: README_optimize.md  comsol.md
outputs/ar_cl2_en_scan_jit/: eedf_table.csv  eepf_table.csv  energy_table.csv  execution_times.csv  summary.csv
outputs/ar_cl2_en_scan_jit2/: eedf_table.csv  eepf_table.csv  energy_table.csv  execution_times.csv  summary.csv
swarm_comsol_exporter/: README.md  my_export.yaml  pyproject.toml
swarm_comsol_exporter/docs/: COMSOL_IMPORT_GUIDE.md  EXPORT_SPEC.md  INTEGRATION_WITH_SWARM_REPO.md
swarm_comsol_exporter/examples/: comsol_export.yaml
swarm_comsol_exporter/scripts/: export_comsol.py
swarm_comsol_exporter/swarm_comsol_export/: cli.py  columns.py  config.py  converter.py  discovery.py  eedf.py  hook.py  io.py
swarm_comsol_exporter/swarm_comsol_export.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swarm_comsol_exporter/tests/: test_converter_minimal.py
swarm_mc/: __about__.py  __init__.py  caching.py  config.py  cross_section.py  electrons.py  energy_distribution.py  gas_mixture.py  jit_kernels.py  monte_carlo.py  output.py  rate_coefficients.py  runner.py  simulation.py  temporal_evolution.py  transport_data.py  utils.py  visualization.py
(+170 files in other folders)
